testsuite/tests/linear/should_fail/Linear17.stderr

Linear17.hs:13:8: error:
    Variable not in scope: error :: [GHC.Types.Char] -> a

Linear17.hs:19:3: error:
    • Couldn't match expected weight ‘1’ of variable ‘x’ with actual weight ‘0’
    • In a stmt of a 'do' block: x <- ()
      In the expression:
        do x <- ()
           (y, z) <- ((), ())
           () <- y
           () <- z
           ....
      In an equation for ‘incorrectDo1’:
          incorrectDo1
            = do x <- ()
                 (y, z) <- ((), ())
                 () <- y
                 ....

Linear17.hs:27:6: error:
    • Couldn't match expected weight ‘1’ of variable ‘z’ with actual weight ‘0’
    • In the pattern: (y, z)
      In a stmt of a 'do' block: (y, z) <- ((), x)
      In the expression:
        do x <- ()
           (y, z) <- ((), x)
           () <- y
           ()

Linear17.hs:32:3: error:
    • Couldn't match type ‘'GHC.Types.Omega’ with ‘'GHC.Types.One’
        arising from an application
    • In a stmt of a 'do' block: x <- ()
      In the expression:
        do x <- ()
           (y, z) <- (x, x)
           () <- y
           () <- z
           ....
      In an equation for ‘incorrectDo3’:
          incorrectDo3
            = do x <- ()
                 (y, z) <- (x, x)
                 () <- y
                 ....
